@@ -2,7 +2,7 @@
 # Kernel/System/Cache/FileRaw.pm - all cache functions
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: FileRaw.pm,v 1.5 2011/08/12 09:06:16 mg Exp $
+# $Id: FileRaw.pm,v 1.6 2011/12/20 10:20:09 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -16,7 +16,7 @@ use warnings;
 umask 002;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.5 $) [1];
+$VERSION = qw($Revision: 1.6 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -31,7 +31,7 @@ sub new {
     }
 
     my $TempDir = $Self->{ConfigObject}->Get('TempDir');
-    $Self->{CacheDirectory} = $TempDir . '/CacheFileRaw/';
+    $Self->{CacheDirectory} = $TempDir . '/CacheFileRaw';
 
     # set mode
     $Self->{Mode} = 'utf8';
