@@ -1,8 +1,8 @@
 # --
 # Kernel/System/Cache/FileStorable.pm - all cache functions
-# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: FileStorable.pm,v 1.8 2010/12/06 14:36:59 martin Exp $
+# $Id: FileStorable.pm,v 1.9 2011/12/20 10:20:09 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -18,7 +18,7 @@ umask 002;
 use Storable qw();
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.8 $) [1];
+$VERSION = qw($Revision: 1.9 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -33,7 +33,7 @@ sub new {
     }
 
     my $TempDir = $Self->{ConfigObject}->Get('TempDir');
-    $Self->{CacheDirectory} = $TempDir . '/CacheFileStorable/';
+    $Self->{CacheDirectory} = $TempDir . '/CacheFileStorable';
 
     # check if cache directory exists and in case create one
     for my $Directory ( $TempDir, $Self->{CacheDirectory} ) {
